--- a/src/directives/src/transfer/transfer.scss
+++ b/src/directives/src/transfer/transfer.scss
@@ -21,6 +21,9 @@
             border-bottom: 1px solid #ebeef5;
             box-sizing: border-box;
             color: #000;
+            .checkbox_label {
+                color: #606266;
+            }
             .transfer__header__label {
                 position: absolute;
                 right: 15px;
