--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -1,3 +1,14 @@
 <div>
-    <transfer v-model="vModel" titles="['左边', '右边']" render-content="renderContent(options)" button-texts="['向左', '向右']" filterable="true" filter-placeholder="请搜索" data="data"></transfer>
+    <transfer
+        v-model="vModel"
+        titles="['左边', '右边']"
+        render-content="renderContent(options)"
+        button-texts="['向左', '向右']"
+        filterable="true"
+        left-default-checked="[1, 2, 3, 4, 5, 6]"
+        right-default-checked="[7, 8, 9, 10]"
+        filter-placeholder="请搜索"
+        data="data">
+    </transfer>
+    <!-- <tree data="treeData"></tree> -->
 </div>
