--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -10,5 +10,5 @@
         filter-placeholder="请搜索"
         data="data">
     </transfer>
-    <!-- <tree data="treeData"></tree> -->
+    <tree data="treeData"></tree>
 </div>
