--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -10,5 +10,9 @@
         filter-placeholder="请搜索"
         data="data">
     </transfer>
-    <tree data="treeData"></tree>
+    <tree
+        show-checkbox="true"
+        data="treeData1"
+        >
+    </tree>
 </div>
