--- a/src/directives/src/table/table.scss
+++ b/src/directives/src/table/table.scss
@@ -3,150 +3,111 @@
 @import 'src/assets/style/vars';
 @import 'src/assets/style/mixins';
 
-.v-table {
+.el-table {
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
+    flex: 1;
     width: 100%;
-    height: 100%;
     max-width: 100%;
-    background-color: $white;
-    font-size: 16px;
+    background-color: #fff;
+    font-size: 14px;
     color: #606266;
-    padding-top: 50px;
-    table {
-        width: 100%;
-        th, td {
-            padding: 15px 0;
-            min-width: 0;
-            box-sizing: border-box;
-            text-overflow: ellipsis;
-            vertical-align: middle;
-            position: relative;
-            text-align: center;
-        }
-        .cell {
-            box-sizing: border-box;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: normal;
-            word-break: break-all;
-            line-height: 23px;
-            padding-left: 10px;
-            padding-right: 10px;
-        }
+    &.el-table--fit {
+        border-right: 0;
+        border-bottom: 0;
     }
-    .v-table__header-wrapper,
-    .v-table__body-wrapper {
-        overflow: hidden;
-        .v-table__header,
-        .v-table__body {
-            table-layout: fixed;
-            border-collapse: separate;
-            tr {
-                background-color: $white;
-            }
-            thead {
-                color: #062238;
-                font-weight: 500;
-                tr {
-                    background-color: #efefef;
-                    th {
-                        white-space: nowrap;
-                        overflow: hidden;
-                        user-select: none;
-                        background-color: #efefef;
-                        div.cell {
-                            position: relative;
-                            word-wrap: normal;
-                            vertical-align: middle;
-                            width: 100%;
-                        }
-                    }
-                }
-            }
-        }
-    }
-    .v-table__header-wrapper {
-        position: absolute;
-        top: 0;
+    &:before {
         left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1px;
+        content: "";
+        position: absolute;
+        background-color: #ebeef5;
+    }
+    &.el-table--border::after,
+    &.el-table--group::after {
+        content: "";
+        position: absolute;
+        background-color: #ebeef5;
+    }
+    .hidden-columns {
+        visibility: hidden;
+        position: absolute;
+        z-index: -1;
+    }
+    .el-table__footer-wrapper,
+    .el-table__header-wrapper {
+        overflow: hidden;
+    }
+    .el-table__body-wrapper,
+    .el-table__footer-wrapper,
+    .el-table__header-wrapper {
         width: 100%;
     }
-    .v-table__body-wrapper {
+    .el-table__body,
+    .el-table__footer,
+    .el-table__header {
+        table-layout: fixed;
+        border-collapse: separate;
+    }
+    thead {
+        color: #909399;
+        font-weight: 500;
+    }
+    tr {
+        background-color: #fff;
+    }
+    td,
+    th.is-leaf {
+        border-bottom: 1px solid #ebeef5;
+    }
+    .cell {
+        box-sizing: border-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: normal;
+        word-break: break-all;
+        line-height: 23px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    th > .cell {
+        position: relative;
+        word-wrap: normal;
+        vertical-align: middle;
         width: 100%;
-        height: 100%;
-        overflow-y: auto;
+    }
+    th > .cell,
+    th div {
+        display: inline-block;
+        box-sizing: border-box;
+        text-overflow: ellipsis;
+    }
+    .el-table__body-wrapper {
+        overflow: hidden;
+        position: relative;
+    }
+    &.el-table--enable-row-transition .el-table__body td {
+        transition: background-color .25s ease;
+    }
+    td,th {
+        padding: 12px 0;
+        min-width: 0;
+        box-sizing: border-box;
+        text-overflow: ellipsis;
+        vertical-align: middle;
+        position: relative;
+        text-align: left;
+    }
+    &.el-table__column-resize-proxy {
+        position: absolute;
+        left: 200px;
+        top: 0;
+        bottom: 0;
+        width: 0;
+        border-left: 1px solid #ebeef5;
+        z-index: 10;
     }
 }
-
-// table {
-//     border: 0;
-//     position: relative;
-//     border-collapse:collapse;
-//     border-spacing:0;
-//     width: 100%;
-//     text-align: center;
-//     background: $white;
-//     border-radius: 4px;
-//     &::before,
-//     &::after {
-//         content: '';
-//         position: absolute;
-//         top: 0;
-//         @include wh(1px, 100%);
-//         background-color: #ececec;
-//     }
-//     &::before {
-//         left: 0;
-//     }
-//     &::after {
-//         right: 0;
-//     }
-//     thead {
-//         border-top: 1px solid #F1F1F1;
-//         border-bottom: 1px solid #F1F1F1;
-//         tr th {
-//             font-size: 18px;
-//             font-weight: normal;
-//             font-stretch: normal;
-//             color: #062238;
-//             padding: 4px 5px;
-//             height: 50px;
-//             line-height: 50px;
-//             background-color: #efefef;
-//             white-space: nowrap !important;
-//             a {
-//                 color: #5f5f5f;
-//                 padding: 0 5px;
-//                 &:hover {
-//                     color: #005a9a;
-//                 }
-//                 i {
-//                     margin: 12px 4px;
-//                     cursor: pointer;
-//                 }
-//             }
-//         }
-//     }
-//     tbody {
-//         tr {
-//             background-color: $white;
-//         }
-//         tr td {
-//             font-size: 20px;
-//             font-weight: normal;
-//             font-stretch: normal;
-//             color: #062238;
-//             padding: 8px;
-//             height: 60px;
-//             line-height: 60px;
-//         }
-//     }
-//     tr.background-ng {
-//         background-color: $global_ng_color;
-//         td {
-//             color: $white;
-//         }
-//     }
-// }
