--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -1,18 +1,3 @@
 <div>
-    <v-table data="data">
-        <v-table-column
-            prop="name"
-            label="姓名"
-            width="150"
-        ></v-table-column>
-        <v-table-column
-            prop="date"
-            label="日期"
-            width="500"
-        ></v-table-column>
-        <v-table-column
-            prop="address"
-            label="地址"
-        ></v-table-column>
-    </v-table>
+    <v-table column="column" data="data"></v-table>
 </div>
