--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -1,3 +1,9 @@
 <div>
-    <v-table column="column" data="data"></v-table>
+    <!-- <v-table column="column" data="data"></v-table> -->
+    <block v-model="vBlock">
+        1231
+        <block-extend>
+            123123
+        </block-extend>
+    </block>
 </div>
