--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -1,9 +1,18 @@
 <div>
-    <!-- <v-table column="column" data="data"></v-table> -->
-    <block v-model="vBlock">
-        1231
-        <block-extend>
-            123123
-        </block-extend>
-    </block>
+    <v-table
+        data="data"
+        >
+        <v-table-column
+            prop="name"
+            label="姓名"
+            ></v-table-column>
+        <v-table-column
+            prop="age"
+            label="年龄"
+            ></v-table-column>
+        <v-table-column
+            prop="sex"
+            label="性别"
+            ></v-table-column>
+    </v-table>
 </div>
