--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -11,8 +11,16 @@
             label="年龄"
             ></v-table-column>
         <v-table-column
-            prop="sex"
-            label="性别"
+            prop="province"
+            label="省份"
+            ></v-table-column>
+        <v-table-column
+            prop="city"
+            label="城市"
+            ></v-table-column>
+        <v-table-column
+            prop="zip"
+            label="zip"
             ></v-table-column>
     </v-table>
 </div>
