--- a/src/directives/src/table/table.scss
+++ b/src/directives/src/table/table.scss
@@ -72,7 +72,7 @@
             text-align: center;
         }
         &.is-right {
-            text-align: center;
+            text-align: right;
         }
     }
     .cell {
