--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -5,6 +5,8 @@
         <v-table-column
             prop="name"
             label="姓名"
+            width="200"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="age"
