--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -5,27 +5,27 @@
         <v-table-column
             prop="name"
             label="姓名"
-            width="1200"
             align="center"
             ></v-table-column>
         <v-table-column
             prop="age"
             label="年龄"
-            width="500"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="province"
             label="省份"
-            width="500"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="city"
             label="城市"
-            width="500"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="zip"
             label="zip"
+            align="center"
             ></v-table-column>
     </v-table>
 </div>
