--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -1,28 +1,25 @@
-<div>
+<div style="width: 800px; margin: 30px auto;">
     <v-table
         data="data"
+        border="true"
         stripe="true"
         >
         <v-table-column
             prop="name"
             label="姓名"
-            width="1200"
             align="center"
             ></v-table-column>
         <v-table-column
             prop="age"
             label="年龄"
-            width="500"
             ></v-table-column>
         <v-table-column
             prop="province"
             label="省份"
-            width="500"
             ></v-table-column>
         <v-table-column
             prop="city"
             label="城市"
-            width="500"
             ></v-table-column>
         <v-table-column
             prop="zip"
