--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -8,6 +8,7 @@
             prop="name"
             label="姓名"
             align="center"
+            width="900"
             ></v-table-column>
         <v-table-column
             prop="age"
