--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -8,23 +8,26 @@
             prop="name"
             label="姓名"
             align="center"
-            width="900"
             ></v-table-column>
         <v-table-column
             prop="age"
             label="年龄"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="province"
             label="省份"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="city"
             label="城市"
+            align="center"
             ></v-table-column>
         <v-table-column
             prop="zip"
             label="zip"
+            align="center"
             ></v-table-column>
     </v-table>
 </div>
