--- a/src/directives/src/table/table.scss
+++ b/src/directives/src/table/table.scss
@@ -105,9 +105,6 @@
         overflow: hidden;
         position: relative;
     }
-    &.el-table--enable-row-hover tr:hover > td {
-        background-color: #f5f7fa;
-    }
     &.el-table--enable-row-transition .el-table__body td {
         transition: background-color .25s ease;
     }
@@ -125,6 +122,9 @@
     &.el-table--border {
         border-right: none;
         border-bottom: none;
+    }
+    &.el-table--enable-row-hover tr:hover > td {
+        background-color: #f5f7fa !important;
     }
     td,th {
         padding: 12px 0;
