--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -3,6 +3,7 @@
         data="data"
         border="true"
         stripe="true"
+        height="200"
         >
         <v-table-column
             prop="name"
