--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -9,6 +9,7 @@
             prop="name"
             label="姓名"
             align="center"
+            width="1250"
             ></v-table-column>
         <v-table-column
             prop="age"
