--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -13,11 +13,13 @@
         <v-table-column
             prop="age"
             label="年龄"
+            fixed="left"
             align="center"
             ></v-table-column>
         <v-table-column
             prop="province"
             label="省份"
+            fixed="right"
             align="center"
             ></v-table-column>
         <v-table-column
