--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -25,6 +25,7 @@
         <v-table-column
             prop="city"
             label="城市"
+            fixed="left"
             align="center"
             ></v-table-column>
         <v-table-column
