--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -19,8 +19,8 @@
         <v-table-column
             prop="province"
             label="省份"
-            fixed="right"
             align="center"
+            width="300"
             ></v-table-column>
         <v-table-column
             prop="city"
@@ -32,6 +32,7 @@
             prop="zip"
             label="zip"
             align="center"
+            width="600"
             ></v-table-column>
     </v-table>
 </div>
