--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -25,7 +25,7 @@
         <v-table-column
             prop="city"
             label="城市"
-            fixed="left"
+            fixed="right"
             align="center"
             ></v-table-column>
         <v-table-column
