--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -13,7 +13,6 @@
         <v-table-column
             prop="age"
             label="年龄"
-            fixed="left"
             align="center"
             ></v-table-column>
         <v-table-column
@@ -25,14 +24,45 @@
         <v-table-column
             prop="city"
             label="城市"
-            fixed="right"
             align="center"
             ></v-table-column>
         <v-table-column
             prop="zip"
             label="zip"
             align="center"
-            width="600"
+            ></v-table-column>
+    </v-table>
+
+    <v-table
+        data="data"
+        border="true"
+        stripe="true"
+        >
+        <v-table-column
+            prop="name"
+            label="姓名"
+            align="center"
+            ></v-table-column>
+        <v-table-column
+            prop="age"
+            label="年龄"
+            align="center"
+            ></v-table-column>
+        <v-table-column
+            prop="province"
+            label="省份"
+            align="center"
+            width="300"
+            ></v-table-column>
+        <v-table-column
+            prop="city"
+            label="城市"
+            align="center"
+            ></v-table-column>
+        <v-table-column
+            prop="zip"
+            label="zip"
+            align="center"
             ></v-table-column>
     </v-table>
 </div>
