fix: 优化table 细节

--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -9,11 +9,14 @@
             prop="name"
             label="姓名"
             align="center"
+            width="300"
             ></v-table-column>
         <v-table-column
             prop="age"
             label="年龄"
+            fixed="left"
             align="center"
+            width="300"
             ></v-table-column>
         <v-table-column
             prop="province"
@@ -25,11 +28,13 @@
             prop="city"
             label="城市"
             align="center"
+            width="300"
             ></v-table-column>
         <v-table-column
             prop="zip"
             label="zip"
             align="center"
+            width="300"
             ></v-table-column>
     </v-table>
 
