--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -3,61 +3,23 @@
         data="data"
         border="true"
         stripe="true"
-        height="250"
         >
         <v-table-column
             prop="name"
             label="姓名"
+            fixed="left"
             align="center"
-            width="300"
             ></v-table-column>
         <v-table-column
             prop="age"
             label="年龄"
             fixed="left"
             align="center"
-            width="300"
             ></v-table-column>
         <v-table-column
             prop="province"
             label="省份"
             align="center"
-            width="300"
-            ></v-table-column>
-        <v-table-column
-            prop="city"
-            label="城市"
-            align="center"
-            width="300"
-            ></v-table-column>
-        <v-table-column
-            prop="zip"
-            label="zip"
-            align="center"
-            width="300"
-            ></v-table-column>
-    </v-table>
-
-    <v-table
-        data="data"
-        border="true"
-        stripe="true"
-        >
-        <v-table-column
-            prop="name"
-            label="姓名"
-            align="center"
-            ></v-table-column>
-        <v-table-column
-            prop="age"
-            label="年龄"
-            align="center"
-            ></v-table-column>
-        <v-table-column
-            prop="province"
-            label="省份"
-            align="center"
-            width="300"
             ></v-table-column>
         <v-table-column
             prop="city"
