--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -1,19 +1,19 @@
-<div style="width: 800px; margin: 30px auto;">
+<div style="width: 1000px; margin: 30px auto;">
     <v-table
         data="data"
         border="true"
         stripe="true"
+        height="250"
         >
         <v-table-column
             prop="name"
             label="姓名"
-            fixed="left"
             align="center"
+            fixed="left"
             ></v-table-column>
         <v-table-column
             prop="age"
             label="年龄"
-            fixed="left"
             align="center"
             ></v-table-column>
         <v-table-column
