--- a/src/view/text/text.html
+++ b/src/view/text/text.html
@@ -3,7 +3,7 @@
         data="data"
         border="true"
         stripe="true"
-        height="250"
+        height="300"
         >
         <v-table-column
             prop="name"
@@ -14,11 +14,13 @@
         <v-table-column
             prop="age"
             label="年龄"
+            width="300"
             align="center"
             ></v-table-column>
         <v-table-column
             prop="province"
             label="省份"
+            width="280"
             align="center"
             ></v-table-column>
         <v-table-column
